--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -49,8 +49,8 @@
                             </children>
                         </GridPane>
                         <Button fx:id="addProduct" layoutX="14.0" layoutY="222.0"
-                                mnemonicParsing="false" onAction="#printOutput" prefHeight="25.0"
-                                prefWidth="192.0" text="Add Poduct"/>
+                                mnemonicParsing="false" onMouseClicked="#printOutput"
+                                prefHeight="25.0" prefWidth="192.0" text="Add Poduct"/>
                     </children>
                 </AnchorPane>
             </content>
@@ -62,10 +62,10 @@
                         <Label prefHeight="50.0" prefWidth="150.0" text="Choose Product"/>
                         <ListView layoutX="229.0" layoutY="14.0" prefHeight="200.0"
                                   prefWidth="367.0"/>
-                        <ComboBox layoutX="240.0" layoutY="38.0" prefHeight="25.0"
-                                  prefWidth="343.0"/>
+                        <ComboBox fx:id="comboBox" layoutX="240.0" layoutY="38.0"
+                                  onMouseClicked="#list" prefHeight="25.0" prefWidth="343.0"/>
                         <Button layoutX="14.0" layoutY="227.0" mnemonicParsing="false"
-                                onAction="#display" prefHeight="25.0" prefWidth="213.0"
+                                onMouseClicked="#record" prefHeight="25.0" prefWidth="213.0"
                                 text="record"/>
                     </children>
                 </AnchorPane>
