--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,10 +16,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-         prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE"
-         xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-         fx:controller="sample.Controller">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <tabs>
         <Tab text="Product Line">
             <content>
@@ -25,32 +24,30 @@
                     <children>
                         <GridPane prefHeight="222.0" prefWidth="600.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-                                                   prefWidth="100.0"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"
-                                                   prefWidth="100.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0"
-                                                vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <TextField GridPane.columnIndex="1"/>
-                                <Label text="Product Name"/>
-                                <Label text="Manufacturer" GridPane.rowIndex="1"/>
-                                <Label text="Item Type" GridPane.rowIndex="2"/>
-                                <ChoiceBox prefHeight="25.0" prefWidth="300.0"
-                                           GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                                <TextField GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                <TextField GridPane.columnIndex="1" />
+                                <Label text="Product Name" />
+                                <Label text="Manufacturer" GridPane.rowIndex="1" />
+                                <Label text="Item Type" GridPane.rowIndex="2" />
+                                <ChoiceBox prefHeight="25.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
                             </children>
                         </GridPane>
-                        <Button fx:id="addProduct" layoutX="14.0" layoutY="222.0"
-                                mnemonicParsing="false" onMouseClicked="#printOutput"
-                                prefHeight="25.0" prefWidth="192.0" text="Add Poduct"/>
+                        <Button fx:id="addProduct" layoutX="14.0" layoutY="222.0" mnemonicParsing="false" onMouseClicked="#printOutput" prefHeight="25.0" prefWidth="192.0" text="Add Poduct" />
+                  <TableView layoutX="6.0" layoutY="256.0" prefHeight="115.0" prefWidth="591.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="C1" />
+                      <TableColumn prefWidth="75.0" text="C2" />
+                    </columns>
+                  </TableView>
                     </children>
                 </AnchorPane>
             </content>
@@ -59,14 +56,10 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <Label prefHeight="50.0" prefWidth="150.0" text="Choose Product"/>
-                        <ListView layoutX="229.0" layoutY="14.0" prefHeight="200.0"
-                                  prefWidth="367.0"/>
-                        <ComboBox fx:id="comboBox" layoutX="240.0" layoutY="38.0"
-                                  onMouseClicked="#list" prefHeight="25.0" prefWidth="343.0"/>
-                        <Button layoutX="14.0" layoutY="227.0" mnemonicParsing="false"
-                                onMouseClicked="#record" prefHeight="25.0" prefWidth="213.0"
-                                text="record"/>
+                        <Label prefHeight="50.0" prefWidth="150.0" text="Choose Product" />
+                        <ListView layoutX="229.0" layoutY="14.0" prefHeight="200.0" prefWidth="367.0" />
+                        <ComboBox fx:id="comboBox" layoutX="240.0" layoutY="38.0" onMouseClicked="#list" prefHeight="25.0" prefWidth="343.0" />
+                        <Button layoutX="14.0" layoutY="227.0" mnemonicParsing="false" onMouseClicked="#record" prefHeight="25.0" prefWidth="213.0" text="record" />
                     </children>
                 </AnchorPane>
             </content>
@@ -75,8 +68,7 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TextArea layoutX="6.0" layoutY="14.0" prefHeight="345.0"
-                                  prefWidth="586.0"/>
+                        <TextArea layoutX="6.0" layoutY="14.0" prefHeight="345.0" prefWidth="586.0" />
                     </children>
                 </AnchorPane>
             </content>
