--- a/src/ProductionLineTracker_OOP/ProductionLine.fxml
+++ b/src/ProductionLineTracker_OOP/ProductionLine.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ProductionLineTracker_OOP.ProductionLine_Controller">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ProductionLineTracker_OOP.ProductionLine_Controller">
     <tabs>
         <Tab text="Product Line">
             <content>
@@ -31,6 +31,7 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
                                 <TextField GridPane.columnIndex="1" />
@@ -39,10 +40,10 @@
                                 <Label text="Item Type" GridPane.rowIndex="2" />
                                 <ChoiceBox fx:id="choiceBox" onMouseClicked="#choice" prefHeight="25.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                 <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Button fx:id="addProduct" mnemonicParsing="false" onMouseClicked="#printOutput" prefHeight="25.0" prefWidth="192.0" text="Add Poduct" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                             </children>
                         </GridPane>
-                        <Button fx:id="addProduct" layoutX="14.0" layoutY="222.0" mnemonicParsing="false" onMouseClicked="#printOutput" prefHeight="25.0" prefWidth="192.0" text="Add Poduct" />
-                        <TableView layoutX="6.0" layoutY="256.0" prefHeight="115.0" prefWidth="591.0">
+                        <TableView layoutX="6.0" layoutY="214.0" prefHeight="157.0" prefWidth="591.0">
                             <columns>
                                 <TableColumn prefWidth="75.0" text="C1" />
                                 <TableColumn prefWidth="75.0" text="C2" />
@@ -58,7 +59,7 @@
                     <children>
                         <Label prefHeight="50.0" prefWidth="150.0" text="Choose Product" />
                         <ListView layoutX="229.0" layoutY="14.0" prefHeight="200.0" prefWidth="367.0" />
-                        <ComboBox fx:id="comboBox" layoutX="240.0" layoutY="38.0" onMouseClicked="#combo" prefHeight="25.0" prefWidth="343.0" />
+                        <ComboBox fx:id="comboBox" layoutX="240.0" layoutY="38.0" onMouseClicked="#initialized" prefHeight="25.0" prefWidth="343.0" />
                         <Button layoutX="14.0" layoutY="227.0" mnemonicParsing="false" onMouseClicked="#record" prefHeight="25.0" prefWidth="213.0" text="record" />
                     </children>
                 </AnchorPane>
