--- a/src/productionlinetracker/ProductionLine.fxml
+++ b/src/productionlinetracker/ProductionLine.fxml
@@ -19,7 +19,7 @@
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
          prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE"
          xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-         fx:controller="productionLineTracker_OOP.ProductionLine_controller">
+         fx:controller="productionlinetracker.ProductionLineController">
     <Tab text="Product Line">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
             <GridPane prefHeight="222.0" prefWidth="600.0">
@@ -37,7 +37,7 @@
                 <Label text="Product Name"/>
                 <Label text="Manufacturer" GridPane.rowIndex="1"/>
                 <Label text="Item Type" GridPane.rowIndex="2"/>
-                <ChoiceBox fx:id="choice_addProduct" onMouseClicked="#choice" prefHeight="25.0"
+                <ChoiceBox fx:id="choiceAddProduct" onAction="#choice" prefHeight="25.0"
                            prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                 <TextField fx:id="tfManufacturer" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                 <Button fx:id="btnAddProduct" mnemonicParsing="false" onMouseClicked="#addProduct"
@@ -60,8 +60,8 @@
             <Label prefHeight="50.0" prefWidth="150.0" text="Choose Product"/>
             <ListView fx:id="lvChooseProduct" layoutX="8.0" layoutY="53.0" prefHeight="161.0"
                       prefWidth="588.0"/>
-            <ComboBox fx:id="cb_showProd" layoutX="8.0" layoutY="226.0"
-                      onMouseClicked="#initialized" prefHeight="25.0" prefWidth="343.0"/>
+            <ComboBox fx:id="cbShowProd" layoutY="226.0" onMouseClicked="#initialized"
+                      prefHeight="25.0" prefWidth="343.0"/>
             <Button fx:id="btnRecord" layoutX="8.0" layoutY="302.0" mnemonicParsing="false"
                     onMouseClicked="#record" prefHeight="25.0" prefWidth="213.0" text="record"/>
         </AnchorPane>
