--- a/src/productionlinetracker/ProductionLine.fxml
+++ b/src/productionlinetracker/ProductionLine.fxml
@@ -37,8 +37,8 @@
                 <Label text="Product Name"/>
                 <Label text="Manufacturer" GridPane.rowIndex="1"/>
                 <Label text="Item Type" GridPane.rowIndex="2"/>
-                <ChoiceBox fx:id="choiceAddProduct" onAction="#choice" prefHeight="25.0"
-                           prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                <ChoiceBox fx:id="choiceAddProduct" prefHeight="25.0" prefWidth="300.0"
+                           GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                 <TextField fx:id="tfManufacturer" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                 <Button fx:id="btnAddProduct" mnemonicParsing="false" onMouseClicked="#addProduct"
                         prefHeight="25.0" prefWidth="192.0" text="Add Product"
@@ -60,8 +60,7 @@
             <Label prefHeight="50.0" prefWidth="150.0" text="Choose Product"/>
             <ListView fx:id="lvChooseProduct" layoutX="8.0" layoutY="53.0" prefHeight="161.0"
                       prefWidth="588.0"/>
-            <ComboBox fx:id="cbShowProd" layoutY="226.0" onMouseClicked="#initialized"
-                      prefHeight="25.0" prefWidth="343.0"/>
+            <ComboBox fx:id="cbShowProd" layoutY="226.0" prefHeight="25.0" prefWidth="343.0"/>
             <Button fx:id="btnRecord" layoutX="8.0" layoutY="302.0" mnemonicParsing="false"
                     onMouseClicked="#record" prefHeight="25.0" prefWidth="213.0" text="record"/>
         </AnchorPane>
