--- a/src/productionlinetracker/ProductionLine.fxml
+++ b/src/productionlinetracker/ProductionLine.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -16,59 +17,62 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-         prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE"
-         xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-         fx:controller="productionlinetracker.ProductionLineController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="productionlinetracker.ProductionLineController">
+   <Tab text="Employee">
+     <content>
+       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <children>
+               <Label layoutX="34.0" layoutY="49.0" prefHeight="17.0" prefWidth="107.0" text="First / Last Name:" />
+               <Label layoutX="36.0" layoutY="106.0" text="Password:" />
+               <TextArea fx:id="taEmployeeAccount" layoutX="9.0" layoutY="205.0" prefHeight="148.0" prefWidth="577.0" />
+               <TextField fx:id="tfFirstName" layoutX="130.0" layoutY="45.0" prefHeight="25.0" prefWidth="190.0" />
+               <Button fx:id="btnCreateAccount" layoutX="130.0" layoutY="154.0" mnemonicParsing="false" onMouseClicked="#createAccount" prefHeight="25.0" prefWidth="185.0" text="Create Account" />
+               <PasswordField fx:id="pfPassword" layoutX="130.0" layoutY="102.0" prefHeight="25.0" prefWidth="189.0" />
+            </children>
+         </AnchorPane>
+     </content>
+   </Tab>
     <Tab text="Product Line">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
             <GridPane prefHeight="222.0" prefWidth="600.0">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 </rowConstraints>
-                <TextField fx:id="tfProductName" GridPane.columnIndex="1"/>
-                <Label text="Product Name"/>
-                <Label text="Manufacturer" GridPane.rowIndex="1"/>
-                <Label text="Item Type" GridPane.rowIndex="2"/>
-                <ChoiceBox fx:id="choiceAddProduct" prefHeight="25.0" prefWidth="300.0"
-                           GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                <TextField fx:id="tfManufacturer" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                <Button fx:id="btnAddProduct" mnemonicParsing="false" onMouseClicked="#addProduct"
-                        prefHeight="25.0" prefWidth="192.0" text="Add Product"
-                        GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                <TextField fx:id="tfProductName" GridPane.columnIndex="1" />
+                <Label text="Product Name" />
+                <Label text="Manufacturer" GridPane.rowIndex="1" />
+                <Label text="Item Type" GridPane.rowIndex="2" />
+                <ChoiceBox fx:id="choiceAddProduct" prefHeight="25.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="tfManufacturer" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Button fx:id="btnAddProduct" mnemonicParsing="false" onMouseClicked="#addProduct" prefHeight="25.0" prefWidth="192.0" text="Add Product" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             </GridPane>
-            <TableView fx:id="tvProducts" layoutX="6.0" layoutY="214.0" prefHeight="157.0"
-                       prefWidth="591.0">
+            <TableView fx:id="tvProducts" layoutX="6.0" layoutY="214.0" prefHeight="157.0" prefWidth="591.0">
                 <columns>
-                    <TableColumn fx:id="clProdName" prefWidth="181.0" text="Name"/>
-                    <TableColumn fx:id="clProdMan" minWidth="0.0" prefWidth="211.0"
-                                 text="Manufacturer"/>
-                    <TableColumn fx:id="clProdType" prefWidth="198.0" text="Type"/>
+                    <TableColumn fx:id="clProdName" prefWidth="181.0" text="Name" />
+                    <TableColumn fx:id="clProdMan" minWidth="0.0" prefWidth="211.0" text="Manufacturer" />
+                    <TableColumn fx:id="clProdType" prefWidth="198.0" text="Type" />
                 </columns>
             </TableView>
         </AnchorPane>
     </Tab>
     <Tab text="Produce">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-            <Label prefHeight="50.0" prefWidth="150.0" text="Choose Product"/>
-            <ListView fx:id="lvChooseProduct" layoutX="8.0" layoutY="53.0" prefHeight="161.0"
-                      prefWidth="588.0"/>
-            <ComboBox fx:id="cbShowProd" layoutY="226.0" prefHeight="25.0" prefWidth="343.0"/>
-            <Button fx:id="btnRecord" layoutX="8.0" layoutY="302.0" mnemonicParsing="false"
-                    onMouseClicked="#record" prefHeight="25.0" prefWidth="213.0" text="record"/>
+            <Label prefHeight="50.0" prefWidth="150.0" text="Choose Product" />
+            <ListView fx:id="lvChooseProduct" layoutX="8.0" layoutY="53.0" prefHeight="161.0" prefWidth="588.0" />
+            <ComboBox fx:id="cbShowProd" layoutY="226.0" prefHeight="25.0" prefWidth="343.0" />
+            <Button fx:id="btnRecord" layoutX="8.0" layoutY="302.0" mnemonicParsing="false" onMouseClicked="#record" prefHeight="25.0" prefWidth="213.0" text="record" />
         </AnchorPane>
     </Tab>
     <Tab text="Production Log">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-            <TextArea fx:id="taProdLog" prefHeight="373.0" prefWidth="600.0"/>
+            <TextArea fx:id="taProdLog" prefHeight="373.0" prefWidth="600.0" />
         </AnchorPane>
     </Tab>
 </TabPane>
